--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Management</title>
+    
 </head>
 
 <body>
@@ -18,5 +19,5 @@
     </main>
 
 </body>
-
+<script src="../client/js/main.js"></script>
 </html>
