Create modal div and add user form

--- a/client/index.html
+++ b/client/index.html
@@ -2,22 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hero Management</title>
-    
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hero Management</title>
+  <script src="https://kit.fontawesome.com/5a03b8ed22.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <header>
-        <h1>User List</h1>
-        <button>+ Add User</button>
-    </header>
-    <main>
+  <header>
+    <h1>User List</h1>
+    <button>+ Add User</button>
+  </header>
+  <main>
+    <!-- The modal -->
+    <div id="add-user-modal" class="modal">
+      <div class="modal-content">
+        <span class="close"><i class="fa-solid fa-xmark"></i></span>
+        <!-- Add user form goes here -->
+        <form>
+          <label for="firstName">First Name</label>
+          <input type="text" id="firstName" name="firstName" required>
 
-    </main>
+          <label for="lastName">Last Name</label>
+          <input type="text" id="lastName" name="lastName" required>
+
+          <label for="dateOfBirth">Date of Birth</label>
+          <select id="month" name="month" required>
+          </select>
+
+          <select id="day" name="day" required>
+          </select>
+
+          <select id="year" name="year" required>
+          </select>
+
+        </form>
+        <button>Create User</button>
+      </div>
+    </div>
+
+  </main>
 
 </body>
 <script src="../client/js/main.js"></script>
+<script src="../client/js/addUser.js"></script>
+
 </html>
