Create dropdown options for months

--- a/client/index.html
+++ b/client/index.html
@@ -29,12 +29,18 @@
 
           <label for="dateOfBirth">Date of Birth</label>
           <select id="month" name="month" required>
+            <option value="" disabled selected hidden>Month</option>
+
           </select>
 
           <select id="day" name="day" required>
+            <option value="" disabled selected hidden>Day</option>
+
           </select>
 
           <select id="year" name="year" required>
+            <option value="" disabled selected hidden>Year</option>
+
           </select>
 
         </form>
