Correct profile picture label and input

--- a/client/index.html
+++ b/client/index.html
@@ -47,11 +47,11 @@
           </select>
 
           <label for="profilePic">Profile Picture Link</label>
-          <input type="text" id="profilePic" name="profilePic" required>
+          <input type="text" id="profilePicture" name="profilePicture" required>
 
           <label for="bio">Bio</label>
           <textarea id="bio" name="bio" required></textarea>
-          
+
           <button type="submit">Create User</button>
         </form>
       </div>
