Update imported script with type module

--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,6 @@
 
 </body>
 <script src="../client/js/main.js"></script>
-<script src="../client/js/addUser.js"></script>
+<script type="module" src="../client/js/addUser.js"></script>
 
 </html>
