Add type module to imported script

--- a/client/index.html
+++ b/client/index.html
@@ -60,7 +60,7 @@
   </main>
 
 </body>
-<script src="../client/js/main.js"></script>
+<script type="module" src="../client/js/main.js"></script>
 <script type="module" src="../client/js/addUser.js"></script>
 
 </html>
