--- a/client/user.html
+++ b/client/user.html
@@ -14,7 +14,7 @@
         <i class="fa-solid fa-pen-to-square"></i>
         <i class="fa-solid fa-trash-can"></i>
     </header>
-    <main>
+    <main class="profile-detail">
 
     </main>
 
