Import updateUser script

--- a/client/user.html
+++ b/client/user.html
@@ -20,5 +20,6 @@
 
 </body>
 <script type="module" src="../client/js/user.js"></script>
+<script type="module" src="../client/js/updateUser.js"></script>
 
 </html>
