--- a/client/index.html
+++ b/client/index.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hero Management</title>
+  <link rel="stylesheet" href="../client/styles/main.css">
   <script src="https://kit.fontawesome.com/5a03b8ed22.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header>
     <h1>User List</h1>
-    <button>+ Add User</button>
+    <button class="add-user-button">+ Add User</button>
   </header>
   <main>
     <!-- The modal -->
