--- a/client/user.html
+++ b/client/user.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero Management - Profile</title>
+    <link rel="stylesheet" href="../client/styles/main.css">
     <script src="https://kit.fontawesome.com/5a03b8ed22.js" crossorigin="anonymous"></script>
 </head>
 <body>
