Update card section html

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,10 @@
         </form>
       </div>
     </div>
+    <section class="cards-section" >
+        <div class="cards-container"></div>
+
+    </section>
 
   </main>
 
