Create overlay div

--- a/client/index.html
+++ b/client/index.html
@@ -57,6 +57,7 @@
         </form>
       </div>
     </div>
+      <div class="overlay"></div>
     <section class="cards-section" >
         <div class="cards-container"></div>
 
