Add class and fix bug closing div tag

--- a/client/index.html
+++ b/client/index.html
@@ -20,10 +20,10 @@
     <div id="add-user-modal" class="modal">
       <div class="modal-content">
         <div class="modal-header">
-          <h3>Create New User</h3>
+          <h3 class="modal-header-title">Create New User</h3>
           <span class="close"><i class="fa-solid fa-xmark"></i></span>
-          <form>
         </div>
+        <form>
 
           <label for="firstName">First Name</label>
           <input type="text" id="firstName" name="firstName" required>
