Update form html with div containers

--- a/client/index.html
+++ b/client/index.html
@@ -55,14 +55,21 @@
               </select>
             </span>
           </div>
+          
+          <div class="form-picture-container">
+            <label for="profilePic">Profile Picture Link</label>
+            <input type="text" id="profilePicture" name="profilePicture" required>
+          </div>
 
-          <label for="profilePic">Profile Picture Link</label>
-          <input type="text" id="profilePicture" name="profilePicture" required>
+          <div class="form-bio-container">
+            <label for="bio">Bio</label>
+            <textarea id="bio" name="bio" required></textarea>
+          </div>
 
-          <label for="bio">Bio</label>
-          <textarea id="bio" name="bio" required></textarea>
+          <div class="form-submit">
+            <button type="submit">Create User</button>
+          </div>
 
-          <button type="submit">Create User</button>
         </form>
 
       </div>
