Add button class

--- a/client/index.html
+++ b/client/index.html
@@ -55,7 +55,7 @@
               </select>
             </span>
           </div>
-          
+
           <div class="form-picture-container">
             <label for="profilePic">Profile Picture Link</label>
             <input type="text" id="profilePicture" name="profilePicture" required>
@@ -67,7 +67,7 @@
           </div>
 
           <div class="form-submit">
-            <button type="submit">Create User</button>
+            <button class="create-user-button" type="submit">Create User</button>
           </div>
 
         </form>
