Update styles and add table/desktop styles

--- a/client/index.html
+++ b/client/index.html
@@ -43,15 +43,15 @@
 
             <span class="dropdown-wrapper">
               <select id="month" name="month" required>
-                <option value="" disabled selected hidden>Month</option>
+                <option value="">Month</option>
               </select>
 
               <select id="day" name="day" required>
-                <option value="" disabled selected hidden>Day</option>
+                <option value="">Day</option>
               </select>
 
               <select id="year" name="year" required>
-                <option value="" disabled selected hidden>Year</option>
+                <option value="">Year</option>
               </select>
             </span>
           </div>
