Style profile page header and icons

--- a/client/user.html
+++ b/client/user.html
@@ -9,11 +9,13 @@
     <script src="https://kit.fontawesome.com/5a03b8ed22.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header class="profile-header">
         <i class="fa-solid fa-arrow-left"></i>
-        <h1>User Profile</h1>
-        <i class="fa-solid fa-pen-to-square"></i>
-        <i class="fa-solid fa-trash-can"></i>
+        <h1 class="profile-header-title">User Profile</h1>
+        <div class="profile-buttons">
+            <i class="fa-solid fa-pen-to-square"></i>
+            <i class="fa-solid fa-trash-can"></i>
+        </div>
     </header>
     <main class="profile-detail">
 
